--- a/postgis/postgis.sql.in
+++ b/postgis/postgis.sql.in
@@ -3145,6 +3145,13 @@ CREATE OR REPLACE FUNCTION ST_SetEffectiveArea(geometry,  float8 default -1, int
 	LANGUAGE 'c' IMMUTABLE STRICT _PARALLEL
 	COST 1; -- reset cost, see #3675
 
+-- Availability: 2.5.0
+CREATE OR REPLACE FUNCTION ST_FilterByM(geom geometry,  min double precision)
+	RETURNS geometry 
+	AS 'MODULE_PATHNAME', 'ST_FilterByM'
+	LANGUAGE 'c' IMMUTABLE STRICT _PARALLEL
+	COST 1;
+    
 -- ST_SnapToGrid(input, xoff, yoff, xsize, ysize)
 -- Availability: 1.2.2
 CREATE OR REPLACE FUNCTION ST_SnapToGrid(geometry, float8, float8, float8, float8)
